--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
 
     "name": "Twitch Chat on Panda.tv",
-    "description": "This chrome extension replaces Arteezys panda.tv chat with his twitch chat. Removes all the unnecessary stuff as well.",
+    "description": "This chrome extension replaces Team Secrets panda.tv chats with their twitch chat. Removes all the unnecessary stuff as well.",
     "version": "1.0",
 
     "browser_action": {
@@ -10,10 +10,11 @@
     },
     "permissions": [
         "http://www.panda.tv/*",
-        "https://www.panda.tv/*"
+        "https://www.panda.tv/*",
+        "tabs"
     ],
     "content_scripts": [{
-        "matches": ["http://www.panda.tv/3332", "https://www.panda.tv/3332"],
+        "matches": ["http://www.panda.tv/*", "https://www.panda.tv/*"],
         "js": ["replace.js"],
         "run_at": "document_start"
     }],
